--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,14 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:background="@drawable/bg"
     tools:context=".LoginActivity">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/icon"
+        android:text="Biblioteca - ITIS Polistena"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="23dp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/username_l"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Username"
-        android:layout_marginTop="50dp"/>
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="80dp"/>
 
     <EditText
         android:id="@+id/password_l"
@@ -20,6 +35,8 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:layout_marginTop="50dp"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
         android:layout_below="@+id/username_l"/>
 
     <Button
@@ -28,6 +45,7 @@
         android:layout_height="wrap_content"
         android:text="Accedi"
         android:layout_marginTop="50dp"
+        android:backgroundTint="@color/crimison"
         android:layout_below="@+id/password_l"/>
 
     <TextView
@@ -38,7 +56,8 @@
         android:layout_below="@+id/login_l"
         android:text="Non sei ancora registrato ?"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="18dp"
+        android:textColor="@color/white"
         android:textAlignment="center"/>
 
     <Button
@@ -46,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
+        android:backgroundTint="@color/crimison"
         android:layout_below="@+id/notregistered"
         android:text="Registrati"/>
 
