--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,37 +17,47 @@
         android:text="Biblioteca - ITIS Polistena"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="23dp"
+        android:textSize="23sp"
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/nome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Username"
+        android:hint="Inserisci il tuo nome"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         android:layout_marginTop="80dp"/>
 
     <EditText
+        android:id="@+id/cognome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Inserisci il tuo cognome"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/nome"/>
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Inserisci il tuo indirizzo e-mail"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/cognome"/>
+
+    <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
-        android:layout_marginTop="50dp"
+        android:hint="Inserisci la tua password"
+        android:layout_marginTop="20dp"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
-        android:layout_below="@+id/username"/>
-
-    <EditText
-        android:id="@+id/cpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Conferma Password"
-        android:layout_marginTop="50dp"
-        android:textColorHint="@color/white"
-        android:backgroundTint="@color/white"
-        android:layout_below="@+id/password"/>
+        android:layout_below="@+id/email"/>
     
     <Button
         android:id="@+id/register"
@@ -56,7 +66,7 @@
         android:text="Registrati"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/crimison"
-        android:layout_below="@+id/cpassword"/>
+        android:layout_below="@+id/password"/>
 
     <TextView
         android:id="@+id/alreadyregistered"
