--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     android:background="@drawable/bg"
     tools:context=".MainActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/blur"
+        android:orientation="vertical"
+            />
 
     <TextView
         android:id="@+id/title"
@@ -14,43 +21,33 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:drawableLeft="@drawable/icon"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        android:padding="20dp"
         android:text="Biblioteca - ITIS Polistena"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="23sp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/nome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Inserisci il tuo nome"
-        android:textColorHint="@color/white"
-        android:backgroundTint="@color/white"
-        android:layout_marginTop="80dp"/>
-
-    <EditText
-        android:id="@+id/cognome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Inserisci il tuo cognome"
-        android:textColorHint="@color/white"
-        android:backgroundTint="@color/white"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/nome"/>
-
-    <EditText
         android:id="@+id/email"
+        android:fontFamily="@font/montserrat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Inserisci il tuo indirizzo e-mail"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/cognome"/>
+        android:layout_marginTop="100dp"
+        android:padding="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp" />
 
     <EditText
         android:id="@+id/password"
+        android:fontFamily="@font/montserrat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Inserisci la tua password"
@@ -58,36 +55,47 @@
         android:inputType="textPassword"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
+        android:padding="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_below="@+id/email"/>
     
-    <Button
-        android:id="@+id/register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Registrati"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="@color/crimison"
-        android:layout_below="@+id/password"/>
-
-    <TextView
-        android:id="@+id/alreadyregistered"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/register"
-        android:text="Sei gia registrato ?"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:textColor="@color/white"
-        android:textAlignment="center"/>
-
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
+        android:text="Accedi"
+        android:layout_marginTop="50dp"
+        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:backgroundTint="@color/crimison"
-        android:layout_below="@+id/alreadyregistered"
-        android:text="Accedi"/>
+        android:fontFamily="@font/montserrat"
+        android:layout_below="@+id/password"/>
+
+    <TextView
+        android:id="@+id/notregistered"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/login"
+        android:text="Non sei registrato ?"
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/montserrat"
+        android:textAlignment="center"/>
+
+    <Button
+        android:id="@+id/register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:backgroundTint="@color/crimison"
+        android:layout_below="@+id/notregistered"
+        android:fontFamily="@font/montserrat"
+        android:text="Registrati"/>
 
 </RelativeLayout>
