--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:padding="20dp"
-        android:text="Biblioteca - ITIS Polistena"
+        android:text="Biblioteca-ITIS Polistena Login utente"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="23sp"
@@ -38,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Inserisci il tuo indirizzo e-mail"
+        android:inputType="textEmailAddress"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         android:layout_marginTop="100dp"
