--- a/app/src/main/res/layout/activity_admin_profile.xml
+++ b/app/src/main/res/layout/activity_admin_profile.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@drawable/bg"
     android:padding="10dp"
-    tools:context=".UserHomePageActivity">
+    tools:context=".AdminProfileActvity">
 
     <ImageView
         android:layout_width="200dp"
@@ -65,19 +65,6 @@
         android:background="@color/crimison"
         android:layout_below="@+id/adminemail"
         android:layout_marginLeft="20dp"/>
-
-    <Button
-        android:id="@+id/logoutadmin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:layout_marginTop="50dp"
-        android:padding="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:backgroundTint="@color/crimison"
-        android:fontFamily="@font/montserrat"
-        android:layout_below="@+id/adminemail"/>
 
 
 
