--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".MainActivity">
+    tools:context=".RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,13 +24,14 @@
         android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:padding="20dp"
-        android:text="Biblioteca - ITIS Polistena"
+        android:text="Biblioteca-ITIS Polistena Registrazione utente"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="23sp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:textStyle="bold" />
+
 
     <EditText
         android:id="@+id/nome_r"
@@ -65,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Inserisci il tuo indirizzo e-mail"
+        android:inputType="textEmailAddress"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         android:layout_marginTop="20dp"
