--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/blur"
         android:orientation="vertical"
-            />
+        />
 
     <TextView
         android:id="@+id/title"
@@ -24,7 +24,7 @@
         android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:padding="20dp"
-        android:text="Biblioteca-ITIS Polistena     Login utente"
+        android:text="Biblioteca-ITIS Polistena     Login Admin"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -33,7 +33,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/email_admin"
         android:fontFamily="@font/montserrat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
         android:layout_marginLeft="20dp" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/password_admin"
         android:fontFamily="@font/montserrat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,10 +59,10 @@
         android:padding="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_below="@+id/email"/>
-    
+        android:layout_below="@+id/email_admin"/>
+
     <Button
-        android:id="@+id/login"
+        android:id="@+id/login_admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Accedi"
@@ -72,56 +72,6 @@
         android:layout_marginRight="20dp"
         android:backgroundTint="@color/crimison"
         android:fontFamily="@font/montserrat"
-        android:layout_below="@+id/password"/>
-
-    <TextView
-        android:id="@+id/notregistered"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/login"
-        android:text="Non sei registrato ?"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/montserrat"
-        android:textAlignment="center"/>
-
-    <Button
-        android:id="@+id/register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:backgroundTint="@color/crimison"
-        android:layout_below="@+id/notregistered"
-        android:fontFamily="@font/montserrat"
-        android:text="Registrati"/>
-
-    <TextView
-        android:id="@+id/isadmin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/register"
-        android:text="Sei un amministratore ?"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/montserrat"
-        android:textAlignment="center"/>
-
-    <Button
-        android:id="@+id/admin_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:backgroundTint="@color/crimison"
-        android:layout_below="@+id/isadmin"
-        android:fontFamily="@font/montserrat"
-        android:text="Accedi come Admin"/>
+        android:layout_below="@+id/password_admin"/>
 
 </RelativeLayout>
